--- a/contactus.html
+++ b/contactus.html
@@ -25,14 +25,18 @@
                 <div class="line-three"></div>
             </div>
             <ul class="md:flex nav-show bg-blue-700 md:bg-transparent text-white text-xl  md:text-base md:text-gray-600 z-40">
-                <li><a href="https://damangames.in/#/register?r_code=QT8N52076993" class="py-2 px-4">Login</a></li>
-                <li><a href="https://damangames.in/#/register?r_code=QT8N52076993" class="py-2 px-4">Register</a></li>
-                <li><a href="https://damangames.in/#/register?r_code=QT8N52076993" class="py-2 px-4">Download</a></li>
+                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Login</a></li>
+                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Register</a></li>
+                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Download</a></li>
                 <li><a href="/contactus.html" class="py-2 px-4">Contact Us</a></li>
                 <li><a href="/aboutus.html" class="py-2 px-4">About Us</a></li>
             </ul>
         </nav>
     </header>
+
+    <div class='fixed bottom-5 right-5 animate-bounce'>
+        <a href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+    </div>
 
     <section class="md:mx-20 mx-2 bg-white p-10 rounded-xl border-[1px] shadow-xl border-gray-300">
         <h1 class="mt-5 text-4xl text-center text-primary font-bold">Contact Us</h1>
