--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div class="line-three"></div>
             </div>
             <ul class="md:flex nav-show bg-blue-700 md:bg-transparent text-white text-xl  md:text-base md:text-gray-600 z-40">
-                <li><a href="https://damangames.in/#/register?r_code=QT8N52076993" class="py-2 px-4">Login</a></li>
-                <li><a href="https://damangames.in/#/register?r_code=QT8N52076993" class="py-2 px-4">Register</a></li>
-                <li><a href="https://damangames.in/#/register?r_code=QT8N52076993" class="py-2 px-4">Download</a></li>
+                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Login</a></li>
+                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Register</a></li>
+                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Download</a></li>
                 <li><a href="/contactus.html" class="py-2 px-4">Contact Us</a></li>
                 <li><a href="/aboutus.html" class="py-2 px-4">About Us</a></li>
             </ul>
@@ -45,11 +45,11 @@
                 </p>
                 <div class="my-4 lg:my-8 flex md:flex-nowrap flex-wrap justify-center w-full">
                     <a class="px-2 py-3 font-semibold rounded-md bg-gradient-to-br from-green-400 to-green-500 outline-1 focus:outline outline-gray-50 hover:shadow-lg hover:scale-105 transition-all me-4"
-                            href="https://damangames.in/#/register?r_code=QT8N52076993">DOWNLOAD APP <img
+                            href="https://2india.in/#/register?invitationCode=873255525992">DOWNLOAD APP <img
                                 src="./assets/img/right-arrow.webp" class="inline rotate-90 drop-shadow-md" width="30px"
                                 alt=""></a>
                     <a class="px-2 py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4"
-                            href="https://damangames.in/#/register?r_code=QT8N52076993">REGISTER NOW</a>
+                            href="https://2india.in/#/register?invitationCode=873255525992">REGISTER NOW</a>
                 </div>
                 <p class="mb-4">Daman Games Invitation Code – <strong>873255525992</strong> (Free ₹100 Bonus)
                 </p>
@@ -65,7 +65,7 @@
                 </ul>
             </div>
             <div>
-                <img src="./assets/img/main.png" width="340px" class="mx-auto drop-shadow-lg " alt="">
+                <img src="./assets/img/main.webp" width="340px" class="mx-auto drop-shadow-lg " alt="">
             </div>
         </section>
 
@@ -432,7 +432,7 @@
                 </div>
                 <div class="flex justify-center items-center">
                     <a class="px-4 animate-bounce py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4"
-                            href="https://damangames.in/#/register?r_code=QT8N52076993">REGISTER NOW</a>
+                            href="https://2india.in/#/register?invitationCode=873255525992">REGISTER NOW</a>
                 </div>
             </div>
         </section>
@@ -577,6 +577,9 @@
             </div>
         </div>
     </footer>
+    <div class='fixed bottom-5 right-5 animate-bounce'>
+        <a href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/owl.carousel.min.js"></script>
