--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
 <body>
     <header class="md:px-10 px-2 py-5 flex justify-between">
         <a href="/" class="text-3xl font-bold">
-            DAMAN GAMES
+            <img src="./assets/img/daman-games-app-logo.png" width="120px" alt="Logo">
         </a>
-<a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/+5CADgRreJNMyYTJl">Join Daman Club</a>
-        <nav class="">
+<div class="my-auto"><a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/+5CADgRreJNMyYTJl">Join Daman Club</a></div>
+        <nav class="my-auto">
             <div class="mt-1 z-50 me-2 menu-button relative md:hidden">
                 <div class="line-one"></div>
                 <div class="line-two"></div>
                 <div class="line-three"></div>
             </div>
             <ul class="md:flex nav-show bg-blue-700 md:bg-transparent text-white text-xl  md:text-base md:text-gray-600 z-40">
-                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Login</a></li>
-                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Register</a></li>
-                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Download</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Login</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Register</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Download</a></li>
                 <li><a href="/contactus.html" class="py-2 px-4">Contact Us</a></li>
                 <li><a href="/aboutus.html" class="py-2 px-4">About Us</a></li>
             </ul>
@@ -90,10 +90,10 @@
                     real money.
                 </p>
                 <div class="my-4 lg:my-8 flex md:flex-nowrap flex-wrap justify-center w-full">
-                    <a class="px-2 py-3 font-semibold rounded-md bg-gradient-to-br from-green-400 to-green-500 outline-1 focus:outline outline-gray-50 hover:shadow-lg hover:scale-105 transition-all me-4" href="https://2india.in/#/register?invitationCode=873255525992">DOWNLOAD APP <img
+                    <a class="px-2 py-3 font-semibold rounded-md bg-gradient-to-br from-green-400 to-green-500 outline-1 focus:outline outline-gray-50 hover:shadow-lg hover:scale-105 transition-all me-4" href="https://damangames.in/#/register?invitationCode=163647009341">DOWNLOAD APP <img
                                 src="./assets/img/right-arrow.webp" class="inline rotate-90 drop-shadow-md" width="30px"
                                 alt=""></a>
-                    <a class="px-2 py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4" href="https://2india.in/#/register?invitationCode=873255525992">REGISTER NOW</a>
+                    <a class="px-2 py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4" href="https://damangames.in/#/register?invitationCode=163647009341">REGISTER NOW</a>
                 </div>
                 <p class="mb-4">Daman Games Invitation Code – <strong>873255525992</strong> (Free ₹100 Bonus)
                 </p>
@@ -109,6 +109,11 @@
             </div>
         </section>
 
+        <section >
+            <div class="flex justify-center">
+                <img src="./assets/img/photo_2024-03-01_20-03-32.jpg" alt="">
+            </div>            
+        </section>
 
         <section>
             <h2 class="text-3xl text-center mb-2 font-medium text-gray-800">What Is <span class="text-primary font-bold">Daman Games App</span>?</h2>
@@ -265,29 +270,45 @@
             </div>
         </section>
 
-        <section>
-            <div class="md:px-10 lg:px-20">
-                <h2 class="text-3xl text-center font-semibold">Earn Through Refer (Refer & Earn)</h2>
-                <ul class="list-disc px-10 mt-8 text-lg">
-                    <li class="mb-2">In this game, this is also among the greatest ways to make money. You can earn Rs 150 per successful referral.
-                    </li>
-                    <li class="mb-2">
-                        You receive a link that you can share with your family and friends. When someone uses your referral link to download the app, you get paid extra.
-                    </li>
-                    <li class="mb-2">Click the profile icon on the Daman Games App home screen first. Here, select "Promotion" and make a copy of your referral code.
-                    </li>
-                    <li class="mb-2">You can share this referral code with your friends and family who are interested in playing the game. When someone downloads the app using your referral link, your referral bonus will be credited to your account.
-                    </li>
-                </ul>
-                <h2 class="text-center mt-11 text-3xl font-semibold">Earn Through Task In Daman App</h2>
-                <ul class="list-disc px-10 mt-8 text-lg">
-                    <li class="mb-2">Not only through referrals, but you can also earn money in Daman app by completing tasks.
-                    </li>
-                    <li class="mb-2"> One of the daily tasks offered by the app is to invite people at a specific time. When you complete these tasks, you get a certain amount credited to your wallet.
-                    </li>
-                    <li class="mb-2"> Using the app, you can track all the people you invited on a daily basis and get extra money.
-                    </li>
-                </ul>
+        <section class="md:px-10 lg:px-20">
+            <div class="grid grid-cols-1 md:grid-cols-2">
+                <div>
+                    <img src="./assets/img/timg (1).jpg" alt="">
+                </div>
+                <div >
+                    <h2 class="text-center mt-11 text-3xl font-semibold">Earn Through Task In Daman App</h2>
+                    <ul class="list-disc px-10 mt-8 text-lg">
+                        <li class="mb-2">Not only through referrals, but you can also earn money in Daman app by completing tasks.
+                        </li>
+                        <li class="mb-2"> One of the daily tasks offered by the app is to invite people at a specific time. When you complete these tasks, you get a certain amount credited to your wallet.
+                        </li>
+                        <li class="mb-2"> Using the app, you can track all the people you invited on a daily basis and get extra money.
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="md:px-10 lg:px-20">
+            <div class="grid grid-cols-1 md:grid-cols-2">
+                <div >
+                    <h2 class="text-3xl text-center font-semibold">Earn Through Refer (Refer & Earn)</h2>
+                    <ul class="list-disc px-10 mt-8 text-lg">
+                        <li class="mb-2">In this game, this is also among the greatest ways to make money. You can earn Rs 150 per successful referral.
+                        </li>
+                        <li class="mb-2">
+                            You receive a link that you can share with your family and friends. When someone uses your referral link to download the app, you get paid extra.
+                        </li>
+                        <li class="mb-2">Click the profile icon on the Daman Games App home screen first. Here, select "Promotion" and make a copy of your referral code.
+                        </li>
+                        <li class="mb-2">You can share this referral code with your friends and family who are interested in playing the game. When someone downloads the app using your referral link, your referral bonus will be credited to your account.
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <img src="./assets/img/timg (2).jpg" class="lg:w-[500px] mx-auto" alt="">
+                </div>
             </div>
         </section>
 
@@ -424,7 +445,7 @@
                     </div>
                 </div>
                 <div class="flex justify-center items-center">
-                    <a class="px-4 animate-bounce py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4" href="https://2india.in/#/register?invitationCode=873255525992">REGISTER NOW</a>
+                    <a class="px-4 animate-bounce py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4" href="https://damangames.in/#/register?invitationCode=163647009341">REGISTER NOW</a>
                 </div>
             </div>
         </section>
