--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daman Game: Casino, Slots & Lottery Games for Thrilling Wins!</title>
+    <title>Daman Game: Instant Earning Fun - Play and earn money </title>
     <meta name="description" content="Experience the ultimate excitement with Daman Game your go-to casino, slots, and lottery Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6C33D6SES"></script>
@@ -95,7 +95,7 @@
                                 alt=""></a>
                     <a class="px-2 py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4" href="https://damangames.in/#/register?invitationCode=163647009341">REGISTER NOW</a>
                 </div>
-                <p class="mb-4">Daman Games Invitation Code – <strong>873255525992</strong> (Free ₹100 Bonus)
+                <p class="mb-4">Daman Games Invitation Code – <strong>163647009341</strong> (Free ₹100 Bonus)
                 </p>
                 <ul class="list-disc">
                     <li>The amazing Daman Game App is a mobile game that allows users to predict colors and earn money. Playing the game is an easy and enjoyable method to earn more money.</li>
