--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex">
     <meta name="robots" content="nofollow">
     <meta name="robots" content="noarchive">
-    <title>Daman Games</title>
+    <title>Daman Game: Instant Earning Fun - Play and earn money </title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -16,18 +16,19 @@
 <body>
     <header class="md:px-10 px-2 py-5 flex justify-between">
         <a href="/" class="text-3xl font-bold">
-            DAMAN GAMES
+            <img src="./assets/img/daman-games-app-logo.png" width="120px" alt="Logo">
         </a>
-        <nav class="">
+<div class="my-auto"><a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/+5CADgRreJNMyYTJl">Join Daman Club</a></div>
+        <nav class="my-auto">
             <div class="mt-1 z-50 me-2 menu-button relative md:hidden">
                 <div class="line-one"></div>
                 <div class="line-two"></div>
                 <div class="line-three"></div>
             </div>
             <ul class="md:flex nav-show bg-blue-700 md:bg-transparent text-white text-xl  md:text-base md:text-gray-600 z-40">
-                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Login</a></li>
-                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Register</a></li>
-                <li><a href="https://2india.in/#/register?invitationCode=873255525992" class="py-2 px-4">Download</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Login</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Register</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Download</a></li>
                 <li><a href="/contactus.html" class="py-2 px-4">Contact Us</a></li>
                 <li><a href="/aboutus.html" class="py-2 px-4">About Us</a></li>
             </ul>
