--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daman Game: Instant Earning Fun - Play and earn money </title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/daman-games-app-logo.png">
     <meta name="description" content="Experience the ultimate excitement with Daman Game your go-to casino, slots, and lottery Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6C33D6SES"></script>
@@ -16,14 +17,15 @@
   gtag('config', 'G-Q6C33D6SES');
 </script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16466255189">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16477219800">
 </script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-16466255189');
+  gtag('config', 'AW-16477219800');
 </script>
 <!-- Event snippet for Outbound click conversion page -->
 <script>
