--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daman Game: Instant Earning Fun - Play and earn money </title>
     <link rel="icon" type="image/x-icon" href="./assets/img/daman-games-app-logo.png">
-    <meta name="description" content="Experience the ultimate excitement with Daman Game your go-to casino, slots, and lottery Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
+    <meta name="description" content="Experience the ultimate excitement with Daman Game your go-to win go, aviator, and sports Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6C33D6SES"></script>
 <script>
@@ -42,8 +42,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Daman Game: Casino, Slots & Lottery App for Thrilling Wins!">
-    <meta property="og:description" content="Experience the ultimate excitement with Daman Game your go-to casino, slots, and lottery Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
+    <meta property="og:title" content="Daman Game: Instant Earning Fun - Play and earn money">
+    <meta property="og:description" content="Experience the ultimate excitement with Daman Game your go-to win go, aviator, and sports Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
     <meta property="og:url" content="https://damanclubs.co/">
     <meta property="og:site_name" content="damanclubs">
     <meta property="article:publisher" content="admin">
@@ -52,8 +52,8 @@
     <meta property="og:image:width" content="979">
     <meta property="og:image:height" content="511">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Daman Game: Casino, Slots & Lottery App for Thrilling Wins!">
-    <meta name="twitter:description" content="Experience the ultimate excitement with Daman Game your go-to casino, slots, and lottery Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
+    <meta name="twitter:title" content="Daman Game: Instant Earning Fun - Play and earn money">
+    <meta name="twitter:description" content="Experience the ultimate excitement with Daman Game your go-to win go, aviator, and sports Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
     <meta name="twitter:creator" content="Admin">
     <meta name="twitter:site" content="">
     <link rel="stylesheet" href="./assets/css/style.css">
