--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section class="hero-banner grid md:grid-cols-2 -mt-0 grid-cols-1 gap-5 ">
             <div class="flex justify-center items-center flex-col lg:ps-10">
                 <h1 class="font-extrabold text-4xl lg:text-5xl text-primary mb-8">Daman Games</h1>
-                <p class="text-xl text-gray-800">Greetings from the official Daman Games App download website. With more than 100 popular games like Rummy, Poker, Color Prediction, and many more, Daman Games is an online gaming platform. With Damangames, you may play, win, and get rewarded
+                <p class="text-xl text-gray-800">Greetings from the official Daman Games App download website. With more than 100 popular games like Win Go, Sports, Color Trading, and many more, Daman Games is an online gaming platform. With Damangames, you may play, win, and get rewarded
                     real money.
                 </p>
                 <div class="my-4 lg:my-8 flex md:flex-nowrap flex-wrap justify-center w-full">
@@ -83,7 +83,7 @@
                 <p class="mb-4">Daman Games Invitation Code – <strong>163647009341</strong> (Free ₹100 Bonus)
                 </p>
                 <ul class="list-disc">
-                    <li>The amazing Daman Game App is a mobile game that allows users to predict colors and earn money. Playing the game is an easy and enjoyable method to earn more money.</li>
+                    <li>The amazing Daman Game App is a mobile game that allows users to colors trading and earn money. Playing the game is an easy and enjoyable method to earn more money.</li>
                     <li>Are you trying to find mobile games that can make money? Should that be the perfect choice, the Daman app is your best option.</li>
                     <li>This post will explain how to play the game, earn money, and withdraw money, as well as how to download the Daman games app.</li>
                     <li>We will also talk about the benefits and disadvantages of playing this game. So let's get started and clear all the confusion.</li>
@@ -106,7 +106,7 @@
             <div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                     <div class="feature-card m-2 p-10 outline outline-blue-300 hover:outline-2 bg-white outline-1 bg-opacity-30 hover:bg-opacity-10 rounded-lg">
-                        <p class="text-center font-normal">Players need to predict the color, including red, green, and purple. To win money, the players must guess the correct hue, and they can win actual cash awards for each accurate guess.</p>
+                        <p class="text-center font-normal">Players need to trade the color, including red, green, and purple. To win money, the players must guess the correct hue, and they can win actual cash awards for each accurate guess.</p>
                     </div>
                     <div class="feature-card m-2 p-10 outline outline-blue-300 hover:outline-2 bg-white outline-1 bg-opacity-30 hover:bg-opacity-10 rounded-lg">
                         <p class="text-center font-normal">The game is easy to learn and fun, and it can be played from anywhere at any time. A smartphone and an internet connection are the only requirements to play the game.</p>
@@ -155,7 +155,7 @@
                     <li class="text-lg ">Also, note that the app is not yet available on the App Store for IOS users.
                     </li>
                     <li class="text-lg ">If you want a signup bonus, be sure to use the code
-                        <strong>“873255525992”</strong> when signup.
+                        <strong>“163647009341”</strong> when signup.
                     </li>
                 </ul>
             </div>
