--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/daman-games-app-logo.png">
     <meta name="description" content="Experience the ultimate excitement with Daman Game your go-to win go, aviator, and sports Games. Unleash the thrill of gaming for epic wins and endless entertainment!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6C33D6SES"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q6C33D6SES');
+</script>
+<!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16498700506">
 </script>
