--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
 
   gtag('config', 'AW-16498700506');
 </script>
+    <!-- Event snippet for Outbound click conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16498700506/Y5UhCIaEi54ZENrhmLs9',
+      'value': 1.0,
+      'currency': 'INR'
+  });
+</script>
+<!-- Event snippet for Outbound click conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16498700506/Y5UhCIaEi54ZENrhmLs9',
+      'value': 1.0,
+      'currency': 'INR'
+  });
+</script>
 <meta name="google-site-verification" content="aVT3FwImT2HC-r7xhZcbmlUBeSDRqHwi8TeblX0vTjg" />
     <meta name="robots" content="index, follow">
     <meta name="keywords" content=" ">
