--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <section class="hero-banner grid md:grid-cols-2 -mt-0 grid-cols-1 gap-5 ">
             <div class="flex justify-center items-center flex-col lg:ps-10">
-                <h1 class="font-extrabold text-4xl lg:text-5xl text-primary mb-8">Daman Games</h1>
+                <h1 class="font-extrabold text-4xl lg:text-5xl text-primary mb-8">Daman Game</h1>
                 <p class="text-xl text-gray-800">Greetings from the official Daman Games App download website. With more than 100 popular games like Win Go, Sports, Color Trading, and many more, Daman Games is an online gaming platform. With Damangames, you may play, win, and get rewarded
                     real money.
                 </p>
