--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -18,7 +18,7 @@
         <a href="/" class="text-3xl font-bold">
             <img src="./assets/img/daman-games-app-logo.png" width="120px" alt="Logo">
         </a>
-<div class="my-auto"><a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/damanclubwebsite">Join Daman Club</a></div>
+<div class="my-auto"><a class="cta-btn px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/damanclubwebsite">Join Daman Club</a></div>
         <nav class="my-auto">
             <div class="mt-1 z-50 me-2 menu-button relative md:hidden">
                 <div class="line-one"></div>
@@ -26,9 +26,9 @@
                 <div class="line-three"></div>
             </div>
             <ul class="md:flex nav-show bg-blue-700 md:bg-transparent text-white text-xl  md:text-base md:text-gray-600 z-40">
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Login</a></li>
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Register</a></li>
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Download</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Login</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Register</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Download</a></li>
                 <li><a href="/contactus.html" class="py-2 px-4">Contact Us</a></li>
                 <li><a href="/aboutus.html" class="py-2 px-4">About Us</a></li>
             </ul>
@@ -36,7 +36,7 @@
     </header>
 
     <div class='fixed bottom-5 right-5 animate-bounce'>
-        <a href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+        <a href="https://t.me/kesha_daman" class="cta-btn"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
     </div>
 
     <main>
@@ -188,8 +188,8 @@
             <div class="w-[340px] mt-5 md:mt-0">
                 <h4 class="text-2xl font-semibold mb-4">Contact Us</h4>
                 <ul class="text-lg">
-                    <li><strong>Email:</strong> <a href="mailto:damangamesapp361@gmail.com"
-                            class="underline">damangamesapp361@gmail.com</a></li>
+                    <li><strong>Email:</strong> <a href="mailto:damangamesapp3611@gmail.com"
+                            class="underline">damangamesapp3611@gmail.com</a></li>
                 </ul>
             </div>
         </div>
