--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="/" class="text-3xl font-bold">
             <img src="./assets/img/daman-games-app-logo.png" width="120px" alt="Logo">
         </a>
-<div class="my-auto"><a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/damanclubwebsite">Join Telegram Channel</a></div>
+<div class="my-auto"><a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full cta-btn" href="https://t.me/damanclubwebsite">Join Telegram Channel</a></div>
         <nav class="my-auto">
             <div class="mt-1 z-50 me-2 menu-button relative md:hidden">
                 <div class="line-one"></div>
