--- a/aboutus.html
+++ b/aboutus.html
@@ -26,9 +26,9 @@
                 <div class="line-three"></div>
             </div>
             <ul class="md:flex nav-show bg-blue-700 md:bg-transparent text-white text-xl  md:text-base md:text-gray-600 z-40">
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Login</a></li>
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Register</a></li>
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="py-2 px-4">Download</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Login</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Register</a></li>
+                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Download</a></li>
                 <li><a href="/contactus.html" class="py-2 px-4">Contact Us</a></li>
                 <li><a href="/aboutus.html" class="py-2 px-4">About Us</a></li>
             </ul>
@@ -36,7 +36,7 @@
     </header>
 
     <div class='fixed bottom-5 right-5 animate-bounce'>
-        <a href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+        <a class="cta-btn" href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
     </div>
 
     <main>
@@ -82,8 +82,8 @@
             <div class="w-[340px] mt-5 md:mt-0">
                 <h4 class="text-2xl font-semibold mb-4">Contact Us</h4>
                 <ul class="text-lg">
-                    <li><strong>Email:</strong> <a href="mailto:damangamesapp361@gmail.com"
-                            class="underline">damangamesapp361@gmail.com</a></li>
+                    <li><strong>Email:</strong> <a href="mailto:damangamesapp3611@gmail.com"
+                            class="underline">damangamesapp3611@gmail.com</a></li>
                 </ul>
             </div>
         </div>
