--- a/contactus.html
+++ b/contactus.html
@@ -36,12 +36,12 @@
     </header>
 
     <div class='fixed bottom-5 right-5 animate-bounce'>
-        <a href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+        <a class="cta-btn" href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
     </div>
 
     <section class="md:mx-20 mx-2 bg-white p-10 rounded-xl border-[1px] shadow-xl border-gray-300">
         <h1 class="mt-5 text-4xl text-center text-primary font-bold">Contact Us</h1>
-        <p class="mb-4 text-lg mt-8">If you have any questions about our website, you can contact us at <a href="mailto:damangamesapp361@gmail.com" class="text-primary">damangamesapp361@gmail.com</a></p>
+        <p class="mb-4 text-lg mt-8">If you have any questions about our website, you can contact us at <a href="mailto:damangamesapp3611@gmail.com" class="text-primary">damangamesapp361@gmail.com</a></p>
         <p class="mb-4 text-lg mt-8">We value your feedback, questions, and suggestions. If you have any questions about the DamanGamesApp or need help with the download process, please do not hesitate to contact us. We are here to provide you with the support you need.</p>
     </section>
 
