--- a/index.html
+++ b/index.html
@@ -581,13 +581,13 @@
             <div class="w-[340px] mt-5 md:mt-0">
                 <h4 class="text-2xl font-semibold mb-4">Contact Us</h4>
                 <ul class="text-lg">
-                    <li><strong>Email:</strong> <a href="mailto:damangamesapp361@gmail.com" class="underline">damangamesapp361@gmail.com</a></li>
+                    <li><strong>Email:</strong> <a href="mailto:damangamesapp3611@gmail.com" class="underline">damangamesapp3611@gmail.com</a></li>
                 </ul>
             </div>
         </div>
     </footer>
     <div class='fixed bottom-5 right-5 animate-bounce'>
-        <a href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+        <a href="https://t.me/kesha_daman" class="cta-btn"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
