--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <div class="line-three"></div>
             </div>
             <ul class="md:flex nav-show bg-blue-700 md:bg-transparent text-white text-xl  md:text-base md:text-gray-600 z-40">
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Login</a></li>
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Register</a></li>
-                <li><a href="https://damangames.in/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Download</a></li>
+                <li><a href="https://damanclub.net/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Login</a></li>
+                <li><a href="https://damanclub.net/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Register</a></li>
+                <li><a href="https://damanclub.net/#/register?invitationCode=163647009341" class="cta-btn py-2 px-4">Download</a></li>
                 <li><a href="/contactus.html" class="py-2 px-4">Contact Us</a></li>
                 <li><a href="/aboutus.html" class="py-2 px-4">About Us</a></li>
             </ul>
@@ -91,10 +91,10 @@
                     real money.
                 </p>
                 <div class="my-4 lg:my-8 flex md:flex-nowrap flex-wrap justify-center w-full">
-                    <a class="px-2 py-3 font-semibold rounded-md bg-gradient-to-br from-green-400 to-green-500 outline-1 focus:outline outline-gray-50 hover:shadow-lg hover:scale-105 transition-all me-4 cta-btn" href="https://damangames.in/#/register?invitationCode=163647009341">DOWNLOAD APP <img
+                    <a class="px-2 py-3 font-semibold rounded-md bg-gradient-to-br from-green-400 to-green-500 outline-1 focus:outline outline-gray-50 hover:shadow-lg hover:scale-105 transition-all me-4 cta-btn" href="https://damanclub.net/#/register?invitationCode=163647009341">DOWNLOAD APP <img
                                 src="./assets/img/right-arrow.webp" class="inline rotate-90 drop-shadow-md" width="30px"
                                 alt=""></a>
-                    <a class="px-2 py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4 cta-btn" href="https://damangames.in/#/register?invitationCode=163647009341">REGISTER NOW</a>
+                    <a class="px-2 py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4 cta-btn" href="https://damanclub.net/#/register?invitationCode=163647009341">REGISTER NOW</a>
                 </div>
                 <p class="mb-4">Daman Games Invitation Code – <strong>163647009341</strong> (Free ₹100 Bonus)
                 </p>
@@ -446,7 +446,7 @@
                     </div>
                 </div>
                 <div class="flex justify-center items-center">
-                    <a class="px-4 animate-bounce py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4 cta-btn" href="https://damangames.in/#/register?invitationCode=163647009341">REGISTER NOW</a>
+                    <a class="px-4 animate-bounce py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4 cta-btn" href="https://damanclub.net/#/register?invitationCode=163647009341">REGISTER NOW</a>
                 </div>
             </div>
         </section>
