--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
         <a href="/" class="text-3xl font-bold">
             <img src="./assets/img/daman-games-app-logo.png" width="120px" alt="Logo">
         </a>
-<div class="my-auto"><a class="cta-btn px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/damanclubwebsite">Join Daman Club</a></div>
+<div class="my-auto"><a class="tele-cta-btn px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full" href="https://t.me/damanclubwebsite">Join Daman Club</a></div>
         <nav class="my-auto">
             <div class="mt-1 z-50 me-2 menu-button relative md:hidden">
                 <div class="line-one"></div>
@@ -36,7 +36,7 @@
     </header>
 
     <div class='fixed bottom-5 right-5 animate-bounce'>
-        <a class="cta-btn" href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+        <a class="tele-cta-btn" href="https://t.me/kesha_daman"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
     </div>
 
     <main>
