--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="/" class="text-3xl font-bold">
             <img src="./assets/img/daman-games-app-logo.png" width="120px" alt="Logo">
         </a>
-<div class="my-auto"><a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full cta-btn" href="https://t.me/damanclubwebsite">Join Telegram Channel</a></div>
+<div class="my-auto"><a class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-bold border rounded-full tele-cta-btn" href="https://t.me/damanclubwebsite">Join Telegram Channel</a></div>
         <nav class="my-auto">
             <div class="mt-1 z-50 me-2 menu-button relative md:hidden">
                 <div class="line-one"></div>
@@ -587,7 +587,7 @@
         </div>
     </footer>
     <div class='fixed bottom-5 right-5 animate-bounce'>
-        <a href="https://t.me/kesha_daman" class="cta-btn"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
+        <a href="https://t.me/kesha_daman" class="tele-cta-btn"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
