--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 alt=""></a>
                     <a class="px-2 py-3 font-semibold mt-1 rounded-md bg-gradient-to-br from-yellow-400 to-yellow-500 hover:shadow-lg outline-1 focus:outline hover:scale-105 outline-gray-50 transition-all me-4 cta-btn" href="https://damanclub.net/#/register?invitationCode=163647009341">REGISTER NOW</a>
                 </div>
-                <p class="mb-4">Daman Games Invitation Code – <strong>163647009341</strong> (Free ₹100 Bonus)
+                <p class="mb-4">Daman Games Invitation Code – <strong class="invitationCode">163647009341</strong> (Free ₹100 Bonus)
                 </p>
                 <ul class="list-disc">
                     <li>The amazing Daman Game App is a mobile game that allows users to colors trading and earn money. Playing the game is an easy and enjoyable method to earn more money.</li>
