Added In999 Link

--- a/index.html
+++ b/index.html
@@ -133,7 +133,15 @@
                 </div>
             </div>
         </section>
-
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '51f6b36a2a94a06db56ed6136b4ec336',
+                'format' : 'iframe',
+                'height' : 60,
+                'width' : 468,
+                'params' : {}
+            };
+        </script>
         <section class="rating-banner">
             <h2 class="text-3xl text-center mb-8 font-medium text-gray-800">A Trusted Platform for Millions of Players
                 <span class="text-primary font-bold">“DAMAN Games”</span>
@@ -589,7 +597,8 @@
     <div class='fixed bottom-5 right-5 animate-bounce'>
         <a href="https://t.me/kesha_daman" class="tele-cta-btn"><img src="./assets/img/telegram.png" class="h-[50px] w-[50px]" alt="telegram"></a>
     </div>
-
+    
+    <script type="text/javascript" src="//www.topcreativeformat.com/51f6b36a2a94a06db56ed6136b4ec336/invoke.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/owl.carousel.min.js"></script>
     <script src="./assets/js/script.js"></script>
