--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       'currency': 'INR'
   });
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1739141323334760"
+     crossorigin="anonymous"></script>
 <meta name="google-site-verification" content="aVT3FwImT2HC-r7xhZcbmlUBeSDRqHwi8TeblX0vTjg" />
     <meta name="robots" content="index, follow">
     <meta name="keywords" content=" ">
